# git-repo-backup

./: .gitignore  Dockerfile  README.md  config.json.example  pyproject.toml  requirements.txt  setup.cfg  setup.py
.docker/: Dockerfile
git_repo_backup/: cli.py  config.py  github.py  gitlab.py  gitlib.py  settings.py
src/: app.py  config.py  filehandler.py  github.py  gitlab.py  gitlib.py  logger.py  main.py  settings.py
