[tool.poetry]
name = "git-repo-backup"
version = "0.1.0"
description = "Backup all your git repos from Github or Gitlab"
authors = ["Liam Lalonde <71791017+llalon@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "git_repo_backup"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
git-repo-backup = "git_repo_backup.cli:main"


